<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BulletZoneClient</string>
    <string name="action_settings">Settings</string>
    <string name="up">FORWARD</string>
    <string name="down">BACKWARD</string>
    <string name="right">RIGHT</string>
    <string name="left">LEFT</string>
    <string name="fire">FIRE</string>
    <string name="join">JOIN</string>
    <string name="leave">LEAVE</string>
    <string name="X2">X2</string>
    <string name="X3">X3</string>
    <string name="X4">X4</string>
    <string name="pause">PAUSE</string>
    <string name="title_activity_my">MyActivity</string>

</resources>