<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ClientActivity">

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.25"
        android:numColumns="16"
        tools:listitem="@layout/field_item"></GridView>

    <RelativeLayout
        android:id="@+id/LinearLayoutControl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/down" />

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonDown"
            android:layout_alignLeft="@+id/buttonDown"
            android:layout_alignRight="@+id/buttonDown"
            android:text="@string/up" />

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/buttonDown"
            android:text="@string/left" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/buttonDown"
            android:text="@string/right" />

        <Button
            android:id="@+id/buttonFire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonUp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-200dp"
            android:layout_marginRight="201dp"
            android:layout_marginBottom="82dp"
            android:layout_toLeftOf="@+id/buttonRight"
            android:text="@string/fire" />

        <Button
            android:id="@+id/buttonLeave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="32dp"
            android:layout_marginRight="45dp"
            android:text="Leave" />

    </RelativeLayout>

</LinearLayout>