<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/LinearLayout1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context=".DBActivity">

<GridView
    android:id="@+id/gridView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.25"
    android:numColumns="16"
    tools:listitem="@layout/field_item"></GridView>

    <RelativeLayout
        android:id="@+id/LinearLayoutControl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.60">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/button3"
            android:onClick="onButton2"
            android:text="@string/X2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="onButton3"
            android:text="@string/X3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/button3"
            android:onClick="onButton4"
            android:text="@string/X4" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button3"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="19dp"
            android:layout_toEndOf="@+id/button2"
            android:onClick="onButtonPause"
            android:text="@string/pause" />

        <Button
            android:id="@+id/buttonReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:onClick="onButtonReplay"
            android:text="Replay" />

    </RelativeLayout>

</LinearLayout>
